Add runnable plugin and add logs.